# jira-mcp-server

./: .coderabbit.yaml  .env.example  .gemini-pr-review.yml  .gitignore  Makefile  OWNERS  README.md  SECURITY.md  jira-assistant-prompt.md  pyproject.toml  test-file.txt
.claude/agents/: bug-specialist.md  epic-specialist.md  feature-specialist.md  initiative-specialist.md  jira-specialist.md  outcome-specialist.md  spike-specialist.md  story-specialist.md  task-specialist.md
.claude/commands/: jira-create.md  myissues.md  summary.md
.claude/skills/bug-specialist/: SKILL.md
.claude/skills/epic-specialist/: SKILL.md
.claude/skills/feature-specialist/: SKILL.md
.claude/skills/finish-work/: SKILL.md
.claude/skills/initiative-specialist/: SKILL.md
.claude/skills/jira-specialist/: SKILL.md
.claude/skills/outcome-specialist/: SKILL.md
.claude/skills/pr-review/: SKILL.md
.claude/skills/spike-specialist/: SKILL.md
.claude/skills/start-work/: SKILL.md
.claude/skills/story-specialist/: SKILL.md
.claude/skills/task-specialist/: SKILL.md
.cursor/commands/: jira-create.md
.github/workflows/: ci.yml  gemini-dispatch.yml  gemini-review.yml  release.yml
doc/: COMPONENT_ALIASES.md  SEARCH_BY_TEAM_FEATURE.md  TEAM_MANAGEMENT.md  TEAM_QUICKSTART.md
docs/: ARCHITECTURE.md
examples/: component_alias_example.py  sse_client.py  team_management_example.py
jira_mcp_server/: __init__.py  client.py  comment_attachments.py  config.py  main.py  server.py
plans/: 2026-04-14-get-project-versions.md  INDEX.md
scripts/: sync-commands.sh  verify-startup.sh
tests/: __init__.py  conftest.py  test_attachment_download_integration.py  test_client_attachments.py  test_client_helpers.py  test_cloud_compat.py  test_comment_attachments.py  test_component_aliases.py  test_config.py  test_connection.py  test_custom_fields.py  test_field_mapping.py  test_issue_to_dict.py  test_server_tools.py  test_team_management.py  test_update_check.py
