[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jira-mcp-server"
version = "0.1.0"
description = "MCP server for local Jira instances"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "fastmcp>=3.2.0",
    "jira>=3.10.5",
    "pydantic>=2.12.0",
    "asyncio-throttle>=1.0.2",
    "python-dotenv>=1.2.0",
    "uvicorn>=0.42.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.0.0",
    "black>=26.0.0",
    "isort>=8.0.0",
    "mypy>=1.20.0",
]

[project.scripts]
jira-mcp-server = "jira_mcp_server.main:main"
jira-mcp-sse = "jira_mcp_server.main:main"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true